# omnia-proxy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: start-proxy.sh
src/: docker.rs  env.rs  main.rs
src/http_api/: handlers.rs  models.rs
src/proxy/: db.rs  docker.rs  ip.rs  mod.rs  models.rs  proxy_db.rs  vpn.rs
src/vpn/: mod.rs  models.rs  vpn.rs
volumes/proxy/: wg0-example.conf
volumes/wireguard/: wg0-example.conf
wireguard/: wg0-example.conf
