[package]
name = "omnia-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
warp = { version = "0.3", features = ["tls"] }
url = "2.3.1"
warp-reverse-proxy = "1.0.0"
serde = { version = "1.0.156", features = ["derive"] }
dotenvy = "0.15.6"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
serde_json = "1.0.94"
futures = "0.3.28"
